fix: gap 미세 조정

--- a/src/AddCard/components/AddCardForm/components/AddCardForm.module.css
+++ b/src/AddCard/components/AddCardForm/components/AddCardForm.module.css
@@ -1,5 +1,5 @@
 .form {
   display: flex;
   flex-direction: column-reverse;
-  gap: 3rem;
+  gap: 1.8rem 0;
 }
